--- a/intro-to-react/public/style.css
+++ b/intro-to-react/public/style.css
@@ -3,3 +3,12 @@
     font-weight: bold;
     margin-left: 30px;
 }
+img {
+    max-width: 100%;
+    height: auto;
+  }
+figcaption {
+    color: #ed0e28;
+    font-size: 30px;
+    font-weight: Bold;
+  }
