--- a/keeper-app/public/styles.css
+++ b/keeper-app/public/styles.css
@@ -65,4 +65,36 @@ footer p {
   cursor: pointer;
   outline: none;
 }
-
+form{
+  position: relative;
+  width: 480px;
+  margin: 20px auto auto 120px;
+  background: #fff;
+  padding: 15px;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
+form input, 
+form textarea{
+  width: 100%;
+  border: none;
+  padding: 4px;
+  outline: none;
+  font-size: 1.2rem;
+  font-family: inherit;
+  resize: none;
+}
+form button{
+  position: relative;
+  right: 18px;
+  bottom: -18px;
+  background: #f5ba13;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
+}
