--- a/threeJS/threejs_sample/src/App.css
+++ b/threeJS/threejs_sample/src/App.css
@@ -9,7 +9,7 @@ body,
   overflow: hidden;
 }
 body {
-  background-color: rgb(31, 31, 31);
+  background-color: #000000;
 }
 .container {
   height: 100vh;
