--- a/threeJS/threejs_sample/src/App.css
+++ b/threeJS/threejs_sample/src/App.css
@@ -8,10 +8,21 @@ body,
   height: 100%;
   overflow: hidden;
 }
-body {
+/* body {
   background-color: #232222;
+} */
+body {
+  background-color: rgb(239, 239, 239);
 }
 .container {
   height: 100vh;
   overflow: auto;
+}
+h1 {
+  font-size: 20em;
+  font-weight: 400;
+  letter-spacing: -0.05em;
+  line-height: 0.7em;
+  margin: 0;
+  padding: 0;
 }
