--- a/threeJS/threejs_sample/src/App.css
+++ b/threeJS/threejs_sample/src/App.css
@@ -8,12 +8,12 @@ body,
   height: 100%;
   overflow: hidden;
 }
-/* body {
-  background-color: #232222;
-} */
 body {
-  background-color: rgb(239, 239, 239);
+  background-color: #232222;
 }
+/* body {
+  background-color: rgb(239, 239, 239);
+} */
 .container {
   height: 100vh;
   overflow: auto;
@@ -25,4 +25,16 @@ h1 {
   line-height: 0.7em;
   margin: 0;
   padding: 0;
+}
+
+.text > div {
+  font-weight: 200;
+  position: absolute;
+  background-color: #000000;
+  color: #ffffff;
+  white-space: nowrap;
+  overflow: hidden;
+  border-radius: 30px;
+  user-select: none;
+  padding: 5px 10px;
 }
