--- a/threeJS/threejs_sample/src/App.css
+++ b/threeJS/threejs_sample/src/App.css
@@ -9,7 +9,8 @@ body,
   overflow: hidden;
 }
 body {
-  background-color: #232222;
+  background-color: #0a0a0a;
+  /* background-color: #232222; */
 }
 /* body {
   background-color: rgb(216, 214, 214);
